Code cleanup, fix deprecations, better close logic